--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,4 @@
 inventory = /home/student/mycode/ansible/inv/dev/hosts-switches
 host_key_checking = false
 retry_files_enabled = false
+roles_path = /home/student/
